--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,11 @@ beautifulsoup4>=4.12.3
 markdown>=3.6
 
 # LLM providers
+openai>=1.10.0
 boto3>=1.34.34
+
+# Environment
+python-dotenv>=1.0.0
 
 # NLP / Embeddings
 sentence-transformers>=2.3.1
