--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,82 @@
-# Core
-pydantic>=2.6.1
-pyyaml>=6.0
-
-# Extractor dependencies
-pymupdf>=1.24.10
-python-docx>=1.1.0
-beautifulsoup4>=4.12.3
-markdown>=3.6
-
-# LLM providers
-openai>=1.10.0
-boto3>=1.34.34
-
-# Environment
-python-dotenv>=1.0.0
-
-# NLP / Embeddings
-sentence-transformers>=2.3.1
-torch>=2.5
-
-# SMT Solver (hard dependency)
-z3-solver>=4.13
-
-# Testing
-pytest>=7.0
-
-# Optional (Extractor)
-# spacy>=3.7.2
-# google-cloud-documentai>=2.24.0
-# ray
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.1
+beautifulsoup4==4.14.3
+boto3==1.42.49
+botocore==1.42.49
+certifi==2026.1.4
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.1
+cryptography==46.0.5
+distro==1.9.0
+filelock==3.21.2
+fsspec==2026.2.0
+google-api-core==2.29.0
+google-auth==2.48.0
+google-cloud-documentai==3.10.0
+googleapis-common-protos==1.72.0
+grpcio==1.78.0
+grpcio-status==1.78.0
+h11==0.16.0
+hf-xet==1.2.0
+httpcore==1.0.9
+httpx==0.28.1
+huggingface-hub==1.4.1
+idna==3.11
+iniconfig==2.3.0
+jinja2==3.1.6
+jiter==0.13.0
+jmespath==1.1.0
+joblib==1.5.3
+lxml==6.0.2
+markdown==3.10.2
+markdown-it-py==4.0.0
+markupsafe==3.0.3
+mdurl==0.1.2
+mpmath==1.3.0
+networkx==3.6.1
+numpy==2.4.2
+openai==2.21.0
+packaging==26.0
+pluggy==1.6.0
+proto-plus==1.27.1
+protobuf==6.33.5
+pyasn1==0.6.2
+pyasn1-modules==0.4.2
+pycparser==3.0
+pydantic==2.12.5
+pydantic-core==2.41.5
+pygments==2.19.2
+pymupdf==1.27.1
+pytest==9.0.2
+python-dateutil==2.9.0.post0
+python-docx==1.2.0
+python-dotenv==1.2.1
+pyyaml==6.0.3
+regex==2026.1.15
+requests==2.32.5
+rich==14.3.2
+rsa==4.9.1
+s3transfer==0.16.0
+safetensors==0.7.0
+scikit-learn==1.8.0
+scipy==1.17.0
+sentence-transformers==5.2.2
+setuptools==82.0.0
+shellingham==1.5.4
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.8.3
+sympy==1.14.0
+threadpoolctl==3.6.0
+tokenizers==0.22.2
+torch==2.10.0
+tqdm==4.67.3
+transformers==5.1.0
+typer==0.23.1
+typer-slim==0.23.1
+typing-extensions==4.15.0
+typing-inspection==0.4.2
+urllib3==2.6.3
+z3-solver==4.15.8.0
