--- a/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_54/document_manifest.json
+++ b/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_54/document_manifest.json
@@ -1,7 +1,7 @@
 {
   "stage": 4,
   "seed": 54,
-  "num_documents": 1,
+  "num_documents": 20,
   "policies_per_doc": 4,
   "model": "claude-opus-4-5-20251101",
   "provider": "aws-bedrock",
@@ -13,7 +13,271 @@
       "stage": 4,
       "profile": "hybrid",
       "policy_ids": [
+        "POL-REFUND-005",
+        "POL-REFUND-015",
+        "POL-SHIP-018",
+        "POL-REFUND-010"
+      ],
+      "conflicts": []
+    },
+    {
+      "doc_id": "doc_002",
+      "path": "../stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_002.md",
+      "stage": 4,
+      "profile": "explicit",
+      "policy_ids": [
+        "POL-SHIP-018",
+        "POL-REFUND-015",
+        "POL-SHIP-003",
+        "POL-PRIVACY-011"
+      ],
+      "conflicts": []
+    },
+    {
+      "doc_id": "doc_003",
+      "path": "../stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_003.md",
+      "stage": 4,
+      "profile": "explicit",
+      "policy_ids": [
+        "POL-RETURNS-014",
+        "POL-RETURNS-009",
+        "POL-SHIP-018",
+        "POL-REFUND-005"
+      ],
+      "conflicts": []
+    },
+    {
+      "doc_id": "doc_004",
+      "path": "../stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_004.md",
+      "stage": 4,
+      "profile": "explicit",
+      "policy_ids": [
+        "POL-RETURNS-009",
+        "POL-REFUND-020",
+        "POL-REFUND-015",
+        "POL-SEC-002"
+      ],
+      "conflicts": []
+    },
+    {
+      "doc_id": "doc_005",
+      "path": "../stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_005.md",
+      "stage": 4,
+      "profile": "explicit",
+      "policy_ids": [
+        "POL-PRIVACY-001",
+        "POL-SEC-012",
+        "POL-RETURNS-009",
+        "POL-REFUND-020"
+      ],
+      "conflicts": []
+    },
+    {
+      "doc_id": "doc_006",
+      "path": "../stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_006.md",
+      "stage": 4,
+      "profile": "explicit",
+      "policy_ids": [
+        "POL-PRIVACY-001",
+        "POL-PRIVACY-006",
+        "POL-REFUND-005",
+        "POL-SHIP-013"
+      ],
+      "conflicts": []
+    },
+    {
+      "doc_id": "doc_007",
+      "path": "../stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_007.md",
+      "stage": 4,
+      "profile": "explicit",
+      "policy_ids": [
+        "POL-PRIVACY-001",
+        "POL-SEC-007",
+        "POL-REFUND-015",
+        "POL-SHIP-013"
+      ],
+      "conflicts": []
+    },
+    {
+      "doc_id": "doc_008",
+      "path": "../stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_008.md",
+      "stage": 4,
+      "profile": "explicit",
+      "policy_ids": [
+        "POL-REFUND-015",
+        "POL-SHIP-008",
+        "POL-RETURNS-019",
         "POL-PRIVACY-001"
+      ],
+      "conflicts": []
+    },
+    {
+      "doc_id": "doc_009",
+      "path": "../stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_009.md",
+      "stage": 4,
+      "profile": "explicit",
+      "policy_ids": [
+        "POL-SHIP-018",
+        "POL-SHIP-008",
+        "POL-PRIVACY-011",
+        "POL-SHIP-013"
+      ],
+      "conflicts": []
+    },
+    {
+      "doc_id": "doc_010",
+      "path": "../stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_010.md",
+      "stage": 4,
+      "profile": "explicit",
+      "policy_ids": [
+        "POL-SHIP-013",
+        "POL-SEC-012",
+        "POL-SHIP-018",
+        "POL-PRIVACY-001"
+      ],
+      "conflicts": []
+    },
+    {
+      "doc_id": "doc_011",
+      "path": "../stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_011.md",
+      "stage": 4,
+      "profile": "implicit",
+      "policy_ids": [
+        "POL-PRIVACY-016",
+        "POL-REFUND-015",
+        "POL-REFUND-010",
+        "POL-SEC-007"
+      ],
+      "conflicts": []
+    },
+    {
+      "doc_id": "doc_012",
+      "path": "../stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_012.md",
+      "stage": 4,
+      "profile": "implicit",
+      "policy_ids": [
+        "POL-SEC-017",
+        "POL-REFUND-015",
+        "POL-SHIP-008",
+        "POL-REFUND-020"
+      ],
+      "conflicts": []
+    },
+    {
+      "doc_id": "doc_013",
+      "path": "../stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_013.md",
+      "stage": 4,
+      "profile": "explicit",
+      "policy_ids": [
+        "POL-REFUND-010",
+        "POL-PRIVACY-011",
+        "POL-RETURNS-009",
+        "POL-SEC-002"
+      ],
+      "conflicts": []
+    },
+    {
+      "doc_id": "doc_014",
+      "path": "../stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_014.md",
+      "stage": 4,
+      "profile": "hybrid",
+      "policy_ids": [
+        "POL-REFUND-020",
+        "POL-PRIVACY-011",
+        "POL-SHIP-013",
+        "POL-SHIP-018"
+      ],
+      "conflicts": [
+        {
+          "policy_id": "POL-REFUND-020",
+          "conflict_text": "**Refund Processing Policy**"
+        },
+        {
+          "policy_id": "POL-SHIP-013",
+          "conflict_text": "**Shipping Fulfillment Policy**"
+        }
+      ]
+    },
+    {
+      "doc_id": "doc_015",
+      "path": "../stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_015.md",
+      "stage": 4,
+      "profile": "implicit",
+      "policy_ids": [
+        "POL-REFUND-020",
+        "POL-REFUND-005",
+        "POL-RETURNS-014",
+        "POL-PRIVACY-011"
+      ],
+      "conflicts": []
+    },
+    {
+      "doc_id": "doc_016",
+      "path": "../stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_016.md",
+      "stage": 4,
+      "profile": "explicit",
+      "policy_ids": [
+        "POL-REFUND-010",
+        "POL-REFUND-020",
+        "POL-RETURNS-004",
+        "POL-REFUND-015"
+      ],
+      "conflicts": []
+    },
+    {
+      "doc_id": "doc_017",
+      "path": "../stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_017.md",
+      "stage": 4,
+      "profile": "hybrid",
+      "policy_ids": [
+        "POL-RETURNS-004",
+        "POL-SEC-007",
+        "POL-REFUND-020",
+        "POL-REFUND-005"
+      ],
+      "conflicts": [
+        {
+          "policy_id": "POL-SEC-007",
+          "conflict_text": "**Security Verification Policy**"
+        }
+      ]
+    },
+    {
+      "doc_id": "doc_018",
+      "path": "../stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_018.md",
+      "stage": 4,
+      "profile": "explicit",
+      "policy_ids": [
+        "POL-SEC-017",
+        "POL-SEC-002",
+        "POL-PRIVACY-001",
+        "POL-SHIP-018"
+      ],
+      "conflicts": []
+    },
+    {
+      "doc_id": "doc_019",
+      "path": "../stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_019.md",
+      "stage": 4,
+      "profile": "explicit",
+      "policy_ids": [
+        "POL-PRIVACY-006",
+        "POL-REFUND-010",
+        "POL-REFUND-015",
+        "POL-PRIVACY-016"
+      ],
+      "conflicts": []
+    },
+    {
+      "doc_id": "doc_020",
+      "path": "../stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_020.md",
+      "stage": 4,
+      "profile": "implicit",
+      "policy_ids": [
+        "POL-REFUND-015",
+        "POL-PRIVACY-011",
+        "POL-SHIP-003",
+        "POL-SHIP-008"
       ],
       "conflicts": []
     }
